--- a/css/master.css
+++ b/css/master.css
@@ -14,4 +14,9 @@ main {
     background-color: white;
     margin: 0 auto;
     min-height: 100vh;
+    padding: 1em;
+}
+
+h1 {
+    margin-top: 0px;
 }
