--- a/css/master.css
+++ b/css/master.css
@@ -20,3 +20,17 @@ main {
 h1 {
     margin-top: 0px;
 }
+
+div.name {
+    font-weight: 400;
+}
+
+ul {
+    padding-left: 0px;
+}
+
+li {
+    list-style: none;
+    padding: .5em;
+    border-bottom: 1px solid #d7d7d7;
+}
